increased values to make sure scrollbar appear in all pages to prevent jumping css

--- a/src/components/Pages/Skills/RenderSkills.scss
+++ b/src/components/Pages/Skills/RenderSkills.scss
@@ -5,7 +5,8 @@
   background-image: url("./assets/19.png");
   min-height: calc(100vh - 235px); //footer + padding
   display: flex;
-  padding: 70px 12% 47px;
+  padding: 70px 12% 67px;
+  padding: 87px 16% 60px;
 
   main {
     width: 100%;
